--- a/load 3D Models/package.json
+++ b/load 3D Models/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "watchcss": "npx tailwindcss -i ./dist/assets/css/input.css -o ./dist/assets/css/style.css --watch"
   },
   "keywords": [],
   "author": "",
